<resources>
    <string name="app_name">Coco Note</string>

    <string name="label_list_notes">All Notes</string>
    <string name="image">image resource</string>
    <string name="fab">fab</string>
    <string name="write_note">Write a Note</string>
    <string name="title">Title</string>
    <string name="note">Notes</string>
    <string name="lbl_title_not_is_empty">No notes available</string>
    <string name="lbl_desc_not_is_empty">Tap the Add button to create a note.</string>
    <string name="save_failed">Failed to Save</string>
    <string name="save_failed_description">The note could not be saved because the content is empty.</string>
    <string name="close">Close</string>
    <string name="delete_confirm">Delete Confirmation</string>
    <string name="delete_confirm_description">Are you sure you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>