<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.writenote.WriteNoteFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:elevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:layout_collapseMode="pin">

            <ImageButton
                android:id="@+id/ib_close"
                android:layout_width="48dp"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layout_marginEnd="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_close" />

            <TextView
                android:id="@+id/app_bar_title"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/write_note" />

            <ImageButton
                android:id="@+id/ib_save"
                android:layout_width="48dp"
                android:layout_height="56dp"
                android:layout_gravity="end"
                android:layout_marginEnd="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_check" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@null"
                android:hint="@string/title"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/ed_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:gravity="top|start"
                android:hint="@string/note"
                android:inputType="textMultiLine"
                tools:ignore="Autofill" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>